<resources>
    <string name="app_name">Santo André On Bus</string>
    <string name="title_activity_line">LineActivity</string>
    <string name="title_home">Home</string>
    <string name="title_general">Geral</string>
    <string name="title_itinerary">Itinerário</string>
    <string name="title_fleet">Frota</string>

    <!-- Splashscreen -->
    <string name="label_disclaimer">Marco Vidal© - 2019 \nEste aplicativo não é oficial e não possui qualquer ligação com empresas ou órgãos oficiais de transporte.</string>

    <!-- General -->
    <string name="label_title">Denominação:</string>
    <string name="placeholder_fromwards">Origem</string>
    <string name="placeholder_towards">Destino</string>
    <string name="label_vehicle">Veículos:</string>
    <string name="placeholder_line_denomination">I-00</string>
    <string name="label_company">Empresa:</string>
    <string name="placeholder_company">Empresa</string>
    <string name="label_prefix">Prefixos:</string>
    <string name="placeholder_prefix">Prefixos</string>
    <string name="label_headway">Intervalo:</string>
    <string name="placeholder_headway">%1$s min.</string>

    <!-- Fetching API Progress Dialog -->
    <string name="dialog_fetching_api_title">Carregando...</string>
    <string name="dialog_fetching_api_message">Obtendo as informações necessárias pela Internet.</string>

    <!-- Failed API fetching Progress Dialog -->
    <string name="dialog_failed_api_title">Falha de comunicação</string>
    <string name="dialog_failed_api_message">Não foi possível obter os dados necessários. Verifique sua conexão com a Internet e tente novamente</string>

    <!-- Image accessibility descriptions -->
    <string name="description_interest_point">Ícone de localização</string>
    <string name="description_headway">Ícone de relógio</string>

    <!-- Search fields -->
    <string name="line_search">Qual destino deseja encontrar?</string>
    <string name="place_search">Qual localidade deseja encontrar?</string>
</resources>
