<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        style="@style/LineFromwardsTowardsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barLineDenominationId"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/barLineFromwardsId"
            style="@style/LineFromwardsTowards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_fromwards"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/barLineTowardsId"
            style="@style/LineFromwardsTowards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_towards"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/barLineDenominationId"
        style="@style/LineDenomination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/placeholder_line_denomination"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
